--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,14 @@
 		    <artifactId>lombok</artifactId>
 		    <version>1.18.22</version>
 		</dependency>
+		
+		<!-- validation -->
+		<dependency>
+		    <groupId>javax.validation</groupId>
+		    <artifactId>validation-api</artifactId>
+		    <version>2.0.1.Final</version>
+		</dependency>
+
        
 	</dependencies>	
     <build>
