--- a/pom.xml
+++ b/pom.xml
@@ -100,8 +100,15 @@
 		    <version>2.0.1.Final</version>
 		</dependency>
 
+		<!-- JSON -->
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20220320</version>
+		</dependency>
        
 	</dependencies>	
+	
     <build>
         <plugins>
             <plugin>
