--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,78 @@
 		    <version>1.4</version>
 		</dependency>
 		
+		<!-- JDBC -->
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-jdbc</artifactId>
+		    <version>${org.springframework-version}</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc8 -->
+		<dependency>
+		    <groupId>com.oracle.database.jdbc</groupId>
+		    <artifactId>ojdbc8</artifactId>
+		    <version>19.3.0.0</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2 -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-dbcp2</artifactId>
+		    <version>2.9.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.googlecode.log4jdbc/log4jdbc -->
+		<dependency>
+		    <groupId>com.googlecode.log4jdbc</groupId>
+		    <artifactId>log4jdbc</artifactId>
+		    <version>1.2</version>
+		</dependency>
+
+		<!-- MyBatis -->	
+		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+		<dependency>
+		    <groupId>org.mybatis</groupId>
+		    <artifactId>mybatis</artifactId>
+		    <version>3.5.9</version>
+		</dependency> 
+		
+		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
+		<dependency>
+		    <groupId>org.mybatis</groupId>
+		    <artifactId>mybatis-spring</artifactId>
+		    <version>2.0.7</version>
+		</dependency>
+		
+		<!-- Security -->
+		<dependency>
+	          <groupId>org.springframework.security</groupId>
+	          <artifactId>spring-security-web</artifactId>
+	          <version>5.5.1</version>
+	    </dependency>
+	      
+	      <dependency>
+	          <groupId>org.springframework.security</groupId>
+	          <artifactId>spring-security-config</artifactId>
+	          <version>5.5.1</version>
+	      </dependency>
+	      
+	      <dependency>
+	          <groupId>org.springframework.security</groupId>
+	          <artifactId>spring-security-taglibs</artifactId>
+	          <version>5.5.1</version>
+	      </dependency>
+	           
+	      <!-- AOP -->
+	      <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+		  <dependency>
+		     <groupId>org.aspectj</groupId>
+		     <artifactId>aspectjweaver</artifactId>
+		     <version>1.9.9.1</version>
+		  </dependency>
+
+
 	</dependencies>	
 	
     <build>
