--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app 
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	xmlns="http://xmlns.jcp.org/xml/ns/javaee" 
-	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" version="4.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+	version="4.0">
 
-	<!-- ContextLoaderListener가 Root WebApplicationContext를 생성할 때 사용할 Spring설정 파일(.XML)의 위치 지정 -->
+	<!-- ContextLoaderListener가 Root WebApplicationContext를 생성할 때 사용할 Spring설정 
+		파일(.XML)의 위치 지정 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:spring/root/*.xml</param-value>
 		<!-- <param-value>/WEB-INF/spring/root/*.xml</param-value> -->
 	</context-param>
-	
-	<!-- 웹 애플리케이션이 배치/해제(시작-deployment/종료-undeployment)될 때, Root WebApplicationContent를 생성하고 제거하기 위해 ContextLoaderListener 설정 -->
+
+	<!-- 웹 애플리케이션이 배치/해제(시작-deployment/종료-undeployment)될 때, Root WebApplicationContent를 
+		생성하고 제거하기 위해 ContextLoaderListener 설정 -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
@@ -20,12 +22,14 @@
 	<servlet>
 		<servlet-name>appServlet</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<!-- DispatcherServlet이 WebApplicationContext를 생성할 때 사용할 Spring설정 파일(.XML)의 위치 지정 -->
+		<!-- DispatcherServlet이 WebApplicationContext를 생성할 때 사용할 Spring설정 파일(.XML)의 
+			위치 지정 -->
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>classpath:spring/dispatcher/*.xml</param-value>
 			<!-- <param-value>/WEB-INF/spring/appServlet/*.xml</param-value> -->
 		</init-param>
+
 		<!-- 404일 경우 500 에러로 발생 -->
 		<init-param>
 			<param-name>throwExceptionIfNoHandlerFound</param-name>
@@ -41,19 +45,22 @@
 			<max-file-size>10485760</max-file-size>
 			<!-- multipart/form-data 전체 크기가 30MB 이하만 허용 -->
 			<max-request-size>31457280</max-request-size>
-			<!-- 임시 파일로 저장해야할 파일의 크기 지정 (0:모든 업로드된 파일은 기본적으로 임시파일(요청 처리가 끝나면 임시파일은 삭제된다) 형태로 C:/Temp에 저장된다) 1024: 파일의 크기가 1024이하이면 메모리에 저장되고, 1024보다 크면 임시 폴더에 파일 형태로 저장한다-->
+			<!-- 임시 파일로 저장해야할 파일의 크기 지정 (0:모든 업로드된 파일은 기본적으로 임시파일(요청 처리가 끝나면 임시파일은 
+				삭제된다) 형태로 C:/Temp에 저장된다) 1024: 파일의 크기가 1024이하이면 메모리에 저장되고, 1024보다 크면 임시 폴더에 
+				파일 형태로 저장한다 -->
 			<file-size-threshold>0</file-size-threshold>
 		</multipart-config>
 	</servlet>
-	
-	
-		
-	<!-- 클라이런트가 http://localhost:8080/webapp/... 이렇게 요청했을 때 DispatcherServlet 처리 -->
+
+
+
+	<!-- 클라이런트가 http://localhost:8080/webapp/... 이렇게 요청했을 때 DispatcherServlet 
+		처리 -->
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	
+
 	<!-- 클라이언트가 Post 방식으로 한글을 보냈을 때 한글을 복원시키는 Filter 추가 -->
 	<filter>
 		<filter-name>encodingFilter</filter-name>
@@ -64,17 +71,23 @@
 		</init-param>
 	</filter>
 
-	<!-- 클라이런트가 http://localhost:8080/webapp/* 이렇게 요청했을 때 CharacterEncodingFilter 처리 -->
+	<!-- 클라이런트가 http://localhost:8080/webapp/* 이렇게 요청했을 때 CharacterEncodingFilter 
+		처리 -->
 	<filter-mapping>
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
+
 	<!-- 404 에러 처리 -->
-	<!--  
-	<error-page>
-		<error-code>404</error-code>
-		<location>/WEB-INF/views/ch10/404.jsp</location>
-	</error-page>
-	-->
+	<!-- <error-page> <error-code>404</error-code> <location>/WEB-INF/views/ch10/404.jsp</location> 
+		</error-page> -->
+
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
